# DS-Practice

./: .gitignore  CMakeLists.txt  README.md  automobile-dataset.ipynb
CC++/: compile.md
CC++/C/: Amir-Afshari-Rectangle.c  Amir-Afshari-Right-Triangle-Reversed.c  Amir-Afshari-Right-Triangle.c  Amir-Afshari-Triangle.c  Amir-Afshari.c  a.out  average.c  code.c  evenCounter.c  factorial.c  fibonacci.c  isPrime.c  max.c  methods.c  multiplyTable.c  pointers&refs.c  random.c  showPrimes.c
CC++/C++/: CMakeLists.txt
CC++/C++/src/: main.cpp  zbar.h
demographic-data/: data.csv
keras/: API.ipynb  Callbacks.ipynb  ascd
numpy/: file  np.ipynb  random.ipynb
numpy/.ipynb_checkpoints/: random-checkpoint.ipynb
pandas/: time-series.ipynb
pytorch/: pytorch.ipynb  voc-dataset.ipynb
stock-market-pca/: README.md  S_Mobarakeh.Steel.csv  code.ipynb
streamlit/app/: app.py  irna.py
